# Albion-Eco-Tools

./: Cargo.toml  index.html  styles.css
shared/: Cargo.toml
shared/src/: models.rs
shared/src/models/: calculations.rs  config.rs  cooking.rs  items.rs  prices.rs  specializations.rs  user.rs
shared/src/models/specializations/: chief.rs
src/: app.rs  components.rs  data.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: calculations.rs  data.rs  lib.rs  loader.rs  main.rs  state.rs  user.rs
src-tauri/src/commands/: items.rs  user.rs
src/api/: user.rs
src/components/: cooking_content.rs  sidebar.rs  topbar.rs  workspace.rs
src/components/cooking_content/: config.rs  enchant.rs  tracking.rs
src/data/: cooking.rs  cooking_content.rs  items.rs  sidebar.rs  specializations.rs  topbar.rs
src/data/cooking/: fish_sauce.rs  food.rs  stews.rs
src/data/specializations/: chief.rs
ui/: Cargo.toml  api.rs  app.rs  main.rs  utils.rs
ui/api/: items.rs  user.rs
ui/components/: cooking_content.rs  sidebar.rs  topbar.rs
ui/components/cooking_content/: config.rs  enchant.rs  ingredients.rs  tracking.rs
ui/components/cooking_content/ingredients/: ingredient_card.rs
ui/components/cooking_content/tracking/: food_card.rs
