[package]
name = "aet-core"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "aet-core"

[lib]
name = "apc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.102"
serde_json = "1.0.149"
aet-shared = { path = "../shared" }

[[bin]]
name = "aet-core"
path = "src/main.rs"

[[bin]]
name = "cooking_seed"
path = "bin/cooking_seed.rs"



