[package]
name = "aet-ui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "AlbionEconomyTools"
path = "main.rs"

[dependencies]
leptos = { version = "0.8.17", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
serde_json = "1.0.149"
strum_macros = "0.28.0"
strum = "0.28.0"
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", branch = "v2", features = ["core"] }
aet-shared = { workspace = true }
chrono = "0.4.44"
tauri = "2.10.3"

