[package]
name = "aet-ui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "AlbionEconomyTools"
path = "main.rs"

[dependencies]
leptos = { version = "0.8.17", features = ["csr"] }
console_error_panic_hook = "0.1.7"
serde_json = "1.0.149"
strum = "0.28.0"
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", branch = "v2", features = ["core"] }
aet-shared = { workspace = true }
chrono = "0.4.44"
serde = { version = "1.0.228", features = ["derive"] }

